--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Simple debug tool",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test.js"
   },
   "repository": {
     "type": "git",
@@ -19,5 +19,9 @@
   "bugs": {
     "url": "https://github.com/goori-soft/logger/issues"
   },
-  "homepage": "https://github.com/goori-soft/logger#readme"
+  "homepage": "https://github.com/goori-soft/logger#readme",
+  "dependencies": {
+    "dateformat": "^3.0.3",
+    "dotenv": "^8.2.0"
+  }
 }
